--- a/css/style.css
+++ b/css/style.css
@@ -29,4 +29,23 @@
 		border-width:2px solid black;
 		border-radius:5px;
 	  }
-	  box-shadow
+      #menu{
+		  width:250px;
+		  background-color:#ccc;
+		  position:absolute;
+		  z-index:100;
+		  font-size:12px;
+		  padding:0px;
+		  list-style:none;
+		  border:1px solid #000;
+		  padding-left:10px;
+	  }
+	  #menu li{
+		  height:25px;
+		  line-height:25px;
+	  }
+	  #menu li a{
+		  text-decoration:none;
+		  color:#960;
+	  }
+	  .active{background:green}
