绘制每个簇轮廓系数的柱状图

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,23 @@
 		  color:#960;
 	  }
 	  .active{background:green}
+	  .axis path,
+		.axis line{
+			fill: none;
+			stroke: black;
+			shape-rendering: crispEdges;
+		}
+	 
+		.axis text {
+			font-family: sans-serif;
+			font-size: 11px;
+		}
+	 
+		.MyRect {
+	 
+		}
+	 
+		.MyText {
+			fill: black;
+			text-anchor: middle;
+		}
