--- a/css/style.css
+++ b/css/style.css
@@ -50,17 +50,21 @@ border-radius:5px;
 }
 .active{background:green}
 .axis path,
-.axis line{
+.axis {
 	fill: none;
 	stroke: black;
 	shape-rendering: crispEdges;
 }
  
-.axis text {
+.axis {
 	font-family: sans-serif;
 	font-size: 11px;
 }
-
+.line{
+	fill: none;
+	stroke: black;
+	shape-rendering: crispEdges;
+}
 .MyRect {
 
 }
