--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ border-radius:5px;
   padding:0px;
   list-style:none;
   border:1px solid #000;
-  padding-left:10px;
+  /*padding-left:5px;*/
 }
 #menu li{
   height:25px;
